feat: Complete backend development and organize documentation
- Fix compilation error by adding status field to TaskRequestDto
- Complete TaskWebController implementation with full CRUD operations
- Add comprehensive task management templates (list, form, detail)
- Reorganize documentation structure with proper hierarchy
- Create product roadmap with user-focused feature planning
- Archive old analysis reports and create current project status
- Update CLAUDE.md with latest project status and documentation links
- All tests passing (107/107) with stable backend foundation

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>